--- a/TIMER_project/Objects/timer_test_project.build_log.htm
+++ b/TIMER_project/Objects/timer_test_project.build_log.htm
@@ -27,6 +27,56 @@ Project File Date:  01/18/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
+assembling startup_stm32f10x_md.s...
+_TIM_CONFIG.c(1): warning: In file included from...
+./_TIM_CONFIG.h(4): warning: In file included from...
+C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(18): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  *              - To use or not the peripheral<92>s drivers in application code(i.e. 
+                                               ^
+C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(19): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  *                code will be based on direct access to peripheral<92>s registers 
+                                                                    ^
+C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(26): warning: invalid UTF-8 in comment [-Winvalid-utf8]
+  *           - Macros to access peripheral<92>s registers hardware
+                                           ^
+_TIM_CONFIG.c(229): warning: no previous prototype for function 'TIM2_IRQHandler' [-Wmissing-prototypes]
+void TIM2_IRQHandler(void){
+     ^
+_TIM_CONFIG.c(229): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void TIM2_IRQHandler(void){
+^
+static 
+_TIM_CONFIG.c(244): warning: no previous prototype for function 'TIM3_IRQHandler' [-Wmissing-prototypes]
+void TIM3_IRQHandler(void){
+     ^
+_TIM_CONFIG.c(244): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void TIM3_IRQHandler(void){
+^
+static 
+_TIM_CONFIG.c(249): warning: no previous prototype for function 'TIM4_IRQHandler' [-Wmissing-prototypes]
+void TIM4_IRQHandler(void){
+     ^
+_TIM_CONFIG.c(249): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void TIM4_IRQHandler(void){
+^
+static 
+_TIM_CONFIG.c(254): warning: no previous prototype for function 'SysTick_Handler' [-Wmissing-prototypes]
+void SysTick_Handler(void){
+     ^
+_TIM_CONFIG.c(254): note: declare 'static' if the function is not intended to be used outside of this translation unit
+void SysTick_Handler(void){
+^
+static 
+_TIM_CONFIG.c(1): warning: In file included from...
+./_TIM_CONFIG.h(5): warning: In file included from...
+./_HAL_GPIO.h(73): warning: unused function 'config_pin' [-Wunused-function]
+static void config_pin(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t mode_type);
+            ^
+./_HAL_GPIO.h(74): warning: unused function 'config_pin_speed' [-Wunused-function]
+static void config_pin_speed(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t pinSpeed, uint32_t mode);
+            ^
+9 warnings generated.
+compiling _TIM_CONFIG.c...
 RTE/Device/STM32F103C8/system_stm32f10x.c(64): warning: In file included from...
 C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(18): warning: invalid UTF-8 in comment [-Winvalid-utf8]
   *              - To use or not the peripheral<92>s drivers in application code(i.e. 
@@ -45,7 +95,6 @@ __I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9}
     ^
 4 warnings generated.
 compiling system_stm32f10x.c...
-assembling startup_stm32f10x_md.s...
 main.c(1): warning: In file included from...
 ./_I2C.h(4): warning: In file included from...
 C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(18): warning: invalid UTF-8 in comment [-Winvalid-utf8]
@@ -57,12 +106,6 @@ C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\s
 C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(26): warning: invalid UTF-8 in comment [-Winvalid-utf8]
   *           - Macros to access peripheral<92>s registers hardware
                                            ^
-main.c(12): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
-        char GPS[20];
-             ^
-main.c(14): warning: variable 'single_rx' set but not used [-Wunused-but-set-variable]
-        char single_rx;
-             ^
 main.c(1): warning: In file included from...
 ./_I2C.h(26): warning: padding struct 'RX_BUFFER' with 2 bytes to align 'receiveBUFF' [-Wpadded]
         char *receiveBUFF;
@@ -99,7 +142,7 @@ static void config_pin(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t mode_typ
 ./_HAL_GPIO.h(74): warning: unused function 'config_pin_speed' [-Wunused-function]
 static void config_pin_speed(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t pinSpeed, uint32_t mode);
             ^
-16 warnings generated.
+14 warnings generated.
 compiling main.c...
 _UART.c(1): warning: In file included from...
 ./_UART.h(1): warning: In file included from...
@@ -153,78 +196,32 @@ _I2C.c(1): warning: In file included from...
 ./_I2C.h(14): warning: padding size of 'TX_BUFFER' with 2 bytes to alignment boundary [-Wpadded]
 typedef struct{
         ^
-_I2C.c(164): warning: no previous prototype for function 'I2C1_EV_IRQHandler' [-Wmissing-prototypes]
+_I2C.c(186): warning: variable 'temp' set but not used [-Wunused-but-set-variable]
+                uint32_t temp;
+                         ^
+_I2C.c(165): warning: no previous prototype for function 'I2C1_EV_IRQHandler' [-Wmissing-prototypes]
 void I2C1_EV_IRQHandler(void){
      ^
-_I2C.c(164): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_I2C.c(165): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void I2C1_EV_IRQHandler(void){
 ^
 static 
-_I2C.c(246): warning: no previous prototype for function 'DMA1_Channel7_IRQHandler' [-Wmissing-prototypes]
+_I2C.c(240): warning: no previous prototype for function 'DMA1_Channel7_IRQHandler' [-Wmissing-prototypes]
 void DMA1_Channel7_IRQHandler(void){    // I2C1 rx
      ^
-_I2C.c(246): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_I2C.c(240): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void DMA1_Channel7_IRQHandler(void){    // I2C1 rx
 ^
 static 
-_I2C.c(254): warning: no previous prototype for function 'DMA1_Channel6_IRQHandler' [-Wmissing-prototypes]
+_I2C.c(248): warning: no previous prototype for function 'DMA1_Channel6_IRQHandler' [-Wmissing-prototypes]
 void DMA1_Channel6_IRQHandler(void){    // I2C1 tx
      ^
-_I2C.c(254): note: declare 'static' if the function is not intended to be used outside of this translation unit
+_I2C.c(248): note: declare 'static' if the function is not intended to be used outside of this translation unit
 void DMA1_Channel6_IRQHandler(void){    // I2C1 tx
 ^
 static 
-8 warnings generated.
-compiling _I2C.c...
-_TIM_CONFIG.c(1): warning: In file included from...
-./_TIM_CONFIG.h(4): warning: In file included from...
-C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(18): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  *              - To use or not the peripheral<92>s drivers in application code(i.e. 
-                                               ^
-C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(19): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  *                code will be based on direct access to peripheral<92>s registers 
-                                                                    ^
-C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(26): warning: invalid UTF-8 in comment [-Winvalid-utf8]
-  *           - Macros to access peripheral<92>s registers hardware
-                                           ^
-_TIM_CONFIG.c(229): warning: no previous prototype for function 'TIM2_IRQHandler' [-Wmissing-prototypes]
-void TIM2_IRQHandler(void){
-     ^
-_TIM_CONFIG.c(229): note: declare 'static' if the function is not intended to be used outside of this translation unit
-void TIM2_IRQHandler(void){
-^
-static 
-_TIM_CONFIG.c(244): warning: no previous prototype for function 'TIM3_IRQHandler' [-Wmissing-prototypes]
-void TIM3_IRQHandler(void){
-     ^
-_TIM_CONFIG.c(244): note: declare 'static' if the function is not intended to be used outside of this translation unit
-void TIM3_IRQHandler(void){
-^
-static 
-_TIM_CONFIG.c(249): warning: no previous prototype for function 'TIM4_IRQHandler' [-Wmissing-prototypes]
-void TIM4_IRQHandler(void){
-     ^
-_TIM_CONFIG.c(249): note: declare 'static' if the function is not intended to be used outside of this translation unit
-void TIM4_IRQHandler(void){
-^
-static 
-_TIM_CONFIG.c(254): warning: no previous prototype for function 'SysTick_Handler' [-Wmissing-prototypes]
-void SysTick_Handler(void){
-     ^
-_TIM_CONFIG.c(254): note: declare 'static' if the function is not intended to be used outside of this translation unit
-void SysTick_Handler(void){
-^
-static 
-_TIM_CONFIG.c(1): warning: In file included from...
-./_TIM_CONFIG.h(5): warning: In file included from...
-./_HAL_GPIO.h(73): warning: unused function 'config_pin' [-Wunused-function]
-static void config_pin(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t mode_type);
-            ^
-./_HAL_GPIO.h(74): warning: unused function 'config_pin_speed' [-Wunused-function]
-static void config_pin_speed(GPIO_TypeDef *port, uint32_t pinNumber, uint32_t pinSpeed, uint32_t mode);
-            ^
 9 warnings generated.
-compiling _TIM_CONFIG.c...
+compiling _I2C.c...
 _HAL_GPIO.c(1): warning: In file included from...
 ./_HAL_GPIO.h(4): warning: In file included from...
 C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include\stm32f10x.h(18): warning: invalid UTF-8 in comment [-Winvalid-utf8]
@@ -245,8 +242,8 @@ uint32_t PINPOS[16]= {//takes me to the 1st BIT in MODE
 4 warnings generated.
 compiling _HAL_GPIO.c...
 linking...
-Program Size: Code=2646 RO-data=270 RW-data=0 ZI-data=1656  
-".\Objects\timer_test_project.axf" - 0 Error(s), 48 Warning(s).
+Program Size: Code=11440 RO-data=836 RW-data=12 ZI-data=1912  
+".\Objects\timer_test_project.axf" - 0 Error(s), 47 Warning(s).
 
 <h2>Software Packages used:</h2>
 
